--- a/ch06/queryer/Cargo.toml
+++ b/ch06/queryer/Cargo.toml
@@ -7,17 +7,22 @@ edition = "2024"
 name = "dialect"
 #path = "examples/dialect.rs"
 [[example]]
-name="covid"
+name = "covid0"
 #path= "examples/covid.rs"
 
+[[example]]
+name = "covid"
+
 [dependencies]
-anyhow="1"
-async-trait="0.1"
-sqlparser="0.10"
-polars = {version = "0.15" ,features = ["json","lazy"]}
-reqwest = {version="0.11", default-features = false, features = ["rustls-tls"]}
-tokio = {version="1" ,features = ["fs"]}
-tracing= "0.1"
+anyhow = "1"
+async-trait = "0.1"
+sqlparser = "0.10"
+polars = { version = "0.15", features = ["json", "lazy"] }
+reqwest = { version = "0.11", default-features = false, features = [
+    "rustls-tls",
+] }
+tokio = { version = "1", features = ["fs"] }
+tracing = "0.1"
 [dev-dependencies]
 tracing-subscriber = "0.2"
-tokio={version="1",features = ["full"]}
+tokio = { version = "1", features = ["full"] }
